main.css: Fix page icons on mobile
33% on mobile screens is tiny and causes the icons to lose their
uniform due trying to fit too much in one spot. Increased to 50%.

--- a/assets/main.css
+++ b/assets/main.css
@@ -167,7 +167,6 @@ pre {
   fill: #000000;
   padding-left: 8px;
   padding-right: 5px;
-  padding-top: 5px;
   vertical-align: text-top; }
 
 /**
@@ -295,7 +294,7 @@ table {
   height: 42px; }
 
 .footer-col-2 {
-  width: 33%;
+  width: 50%;
   margin: 0 auto;
   white-space: nowrap; }
 
